--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,12 @@ Config/testthat/edition: 3
 URL: https://github.com/RhysPeploe/iddoverse
 BugReports: https://github.com/RhysPeploe/iddoverse/issues
 Imports: 
+    admiral,
     anthro,
     dplyr,
-    magrittr
+    janitor,
+    lubridate,
+    magrittr,
+    stringr,
+    tidyr,
+    tidyselect
