Chnage of name in OUT functions, import from tidyr::unite

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(DERIVE_SEASON)
 export(DERIVE_TIMING)
 export(DOMAIN_TABLE)
 export(PREP_DM)
-export(PREP_DS_VL_OUT)
+export(PREP_DS_OUT_VL)
 export(PREP_ER_FIRST)
 export(PREP_IN_BL)
 export(PREP_IN_BMV_BL)
@@ -40,7 +40,7 @@ export(PREP_MP_FU)
 export(PREP_PO_FU)
 export(PREP_RP_BL)
 export(PREP_RP_FU)
-export(PREP_RS_VL_OUT)
+export(PREP_RS_OUT_VL)
 export(PREP_SA_BL)
 export(PREP_SA_FIRST)
 export(PREP_SA_FU)
@@ -73,6 +73,7 @@ importFrom(magrittr,"%>%")
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_to_upper)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,unite)
 importFrom(tidyselect,ends_with)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,starts_with)
