Changes to names of exported functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,12 +29,12 @@ export(PREP_LB_FU)
 export(PREP_MBSPEC_BL)
 export(PREP_MBSPEC_FU)
 export(PREP_MB_BL)
+export(PREP_MB_BL_MAL)
+export(PREP_MB_BL_VL)
 export(PREP_MB_FIRST)
 export(PREP_MB_FU)
-export(PREP_MB_MAL_BL)
-export(PREP_MB_MAL_FU)
-export(PREP_MB_VL_BL)
-export(PREP_MB_VL_FU)
+export(PREP_MB_FU_MAL)
+export(PREP_MB_FU_VL)
 export(PREP_MP_BL)
 export(PREP_MP_FU)
 export(PREP_PO_FU)
