Addition of dplyr::select

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,row_number)
+importFrom(dplyr,select)
 importFrom(janitor,clean_names)
 importFrom(lubridate,month)
 importFrom(magrittr,"%>%")
