--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
+importFrom(dplyr,last)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,relocate)
