--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(dplyr,select)
 importFrom(janitor,clean_names)
 importFrom(lubridate,month)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_to_upper)
 importFrom(tidyr,pivot_wider)
