--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://github.com/RhysPeploe/iddoverse
@@ -26,3 +28,4 @@ Imports:
     stringr,
     tidyr,
     tidyselect
+VignetteBuilder: knitr
