--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,12 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+    kableExtra,
     knitr,
+    reactable,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tibble
 Config/testthat/edition: 3
 URL: https://github.com/RhysPeploe/iddoverse
 BugReports: https://github.com/RhysPeploe/iddoverse/issues
