--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
+    devtools,
     kableExtra,
     knitr,
     reactable,
