--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(JOIN_HIV)
 export(JOIN_MV)
 export(JOIN_PREGNANT)
 export(PREP_DM)
+export(PREP_DS_OUT_EVD)
 export(PREP_DS_OUT_VL)
 export(PREP_ER_FIRST)
 export(PREP_IN_BL)
