--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ANALYSE_BASELINE)
 export(ANALYSE_FIRST_OCCURRENCE)
 export(ANALYSE_FOLLOW_UP)
+export(ANALYSE_HR0SCR_BASELINE)
 export(ANALYSE_OUTCOME_VL)
 export(CLEAN_IN)
 export(CLEAN_MB_VL)
@@ -30,8 +31,10 @@ export(PREP_IN_FU)
 export(PREP_LB_BL)
 export(PREP_LB_FIRST)
 export(PREP_LB_FU)
+export(PREP_LB_HR0_BL)
 export(PREP_MBSPEC_BL)
 export(PREP_MBSPEC_FU)
+export(PREP_MBSPEC_HR0_BL)
 export(PREP_MB_BL)
 export(PREP_MB_BL_MAL)
 export(PREP_MB_BL_VL)
@@ -39,6 +42,8 @@ export(PREP_MB_FIRST)
 export(PREP_MB_FU)
 export(PREP_MB_FU_MAL)
 export(PREP_MB_FU_VL)
+export(PREP_MB_HR0_BL)
+export(PREP_MB_HR0_BL_MAL)
 export(PREP_MP_BL)
 export(PREP_MP_FU)
 export(PREP_PO_FU)
@@ -55,6 +60,8 @@ export(PREP_TS)
 export(PREP_VS_BL)
 export(PREP_VS_FIRST)
 export(PREP_VS_FU)
+export(PREP_VS_SCR_BL)
+export(PREP_VS_SCR_TEMP_BL)
 export(PREP_VS_TEMP_BL)
 export(PREP_VS_TEMP_FU)
 importFrom(admiral,compute_bmi)
