--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(PREP_APDM)
 export(PREP_APRS_FU)
 export(PREP_APSA_MIMBA_FU)
 export(PREP_DM)
+export(PREP_DS_MIMBA_FU)
 export(PREP_DS_OUT_EVD)
 export(PREP_DS_OUT_VL)
 export(PREP_ER_FIRST)
@@ -38,6 +39,7 @@ export(PREP_LB_BL)
 export(PREP_LB_FIRST)
 export(PREP_LB_FU)
 export(PREP_LB_HR0_BL)
+export(PREP_LB_MIMBA_FU)
 export(PREP_MBSPEC_BL)
 export(PREP_MBSPEC_FU)
 export(PREP_MBSPEC_HR0_BL)
@@ -71,6 +73,7 @@ export(PREP_TS)
 export(PREP_VS_BL)
 export(PREP_VS_FIRST)
 export(PREP_VS_FU)
+export(PREP_VS_MIMBA_FU)
 export(PREP_VS_SCR_BL)
 export(PREP_VS_SCR_TEMP_BL)
 export(PREP_VS_TEMP_BL)
