Additional exports for APHO, APVS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,10 @@ export(JOIN_MV)
 export(JOIN_PREGNANT)
 export(PREP_APDD_FU)
 export(PREP_APDM)
+export(PREP_APHO_MIMBA_FU)
 export(PREP_APRS_FU)
 export(PREP_APSA_MIMBA_FU)
+export(PREP_APVS_MIMBA_FU)
 export(PREP_DM)
 export(PREP_DS_MIMBA_FU)
 export(PREP_DS_OUT_EVD)
