--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(create_participant_map)
 export(create_studies_map)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_by_at)
+importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,right_join)
 importFrom(dplyr,summarise)
