--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: worlddatr
-Title: What the Package Does (One Line, Title Case)
+Title: ISO Codes, World Bank and Location Data of Countries Around the World
 Version: 1.2.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Rhys", "Peploe", , "rhys.peploe@iddo.org", role = c("aut", "cre"),
+           comment = c(ORCID = "0009-0001-1669-3716"))
+Description: Data and functions for working with country and territory data including ISO codes, World Bank income groups, longitude and latitude.
 License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
