--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,4 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+URL: https://infectious-diseases-data-observatory.github.io/worlddatr/
