--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: worlddatr
-Title: A package for global spatial data analysis and choropleth maps
+Title: A Package For Global Choropleth Maps
 Version: 1.3.1
 Authors@R: 
     person("Rhys", "Peploe", , "rhys.peploe@iddo.org", role = c("aut", "cre"),
