--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: worlddatr
 Title: A Package For Global Choropleth Maps
 Version: 1.3.1
 Authors@R: 
-    person("Rhys", "Peploe", , "rhys.peploe@iddo.org", role = c("aut", "cre"),
+    person("Rhys", "Peploe", , "rhyspeploe1998@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0001-1669-3716"))
 Description: Data and functions for working with country and territory data including ISO codes, World Bank income groups, longitude and latitude.
 License: CC BY 4.0
