--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: iddoverse
 Title: Converting IDDO-SDTM Data To Analysis Datasets
 Version: 0.6.2
 Authors@R: 
-    person("Rhys", "Peploe", , "rhys.peploe@iddo.org", role = c("aut", "cre"),
+    person("Rhys", "Peploe", , "rhyspeploe1998@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0001-1669-3716"))
 Description: Functions to convert IDDO-curated SDTM domains into analysis datasets, 
     similar to the Analysis Data Model (ADaM).
