--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,8 @@ export(PREP_MB_HR0_BL_MAL)
 export(PREP_MB_MIMBA_FU)
 export(PREP_MP_BL)
 export(PREP_MP_FU)
+export(PREP_PF_BL)
+export(PREP_PF_FU)
 export(PREP_PO_FU)
 export(PREP_PO_MIMBA_FU)
 export(PREP_RP_BL)
@@ -83,6 +85,7 @@ export(PREP_VS_TEMP_FU)
 importFrom(admiral,compute_bmi)
 importFrom(admiral,convert_blanks_to_na)
 importFrom(anthro,anthro_zscores)
+importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
@@ -96,10 +99,12 @@ importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(janitor,clean_names)
 importFrom(lubridate,month)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(stringr,str_c)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_to_upper)
 importFrom(tidyr,pivot_wider)
